--- a/plugin.xml
+++ b/plugin.xml
@@ -16,8 +16,11 @@
         <!--ios8或更高版本-->
         <engine name="cordova-ios" version=">=4.0.0" />
     </engines>
-    <js-module src="www/sharesdk.js" name="ShareSDK">
+    <js-module src="www/ShareSDK.js" name="share">
         <clobbers target="sharesdk.share" />
+    </js-module>
+    <js-module src="www/ShareSDKConstants.js" name="ShareSDK">
+        <clobbers target="ShareSDK" />
     </js-module>
     <!--reference http://wiki.mob.com/Android_%E5%BF%AB%E9%80%9F%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/-->
     <platform name="android">
