--- a/plugin.xml
+++ b/plugin.xml
@@ -58,10 +58,10 @@
         </edit-config>
         <!-- Wechat微信和WechatMoments微信朋友圈的appid是一样的.微信测试的时候，微信测试需要先签名打包出apk,BypassApproval是绕过审核的标记，设置为true后AppId将被忽略，故不经过审核的应用也可以执行分享，但是仅限于分享文字和图片，不能分享其他类型.默认值为false。此外，微信收藏不支持此字段。-->
         <edit-config file="assets/ShareSDK.xml" target="/DevInfor/Wechat" mode="overwrite">
-            <Wechat Id="4" SortId="4" AppId="$WECHAT_APP_ID" AppSecret="$WECHAT_APP_SECRET" BypassApproval="true" Enable="true" />
+            <Wechat Id="4" SortId="4" AppId="$WECHAT_APP_ID" AppSecret="$WECHAT_APP_SECRET" BypassApproval="false" Enable="true" />
         </edit-config>
         <edit-config file="assets/ShareSDK.xml" target="/DevInfor/WechatMoments" mode="overwrite">
-            <WechatMoments Id="5" SortId="5" AppId="$WECHAT_APP_ID" AppSecret="$WECHAT_APP_SECRET" BypassApproval="true" Enable="true" />
+            <WechatMoments Id="5" SortId="5" AppId="$WECHAT_APP_ID" AppSecret="$WECHAT_APP_SECRET" BypassApproval="false" Enable="true" />
         </edit-config>
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <!--微信分享回调 WXEntryActivity是相对路径，所以需要获取当前项目的包名，动态copy到指定目录。通过cordova的hook完成-->
