--- a/plugin.xml
+++ b/plugin.xml
@@ -37,9 +37,12 @@
         <lib-file src="src/android/ShareSDK/libs/MobCommons-2016.1222.1756.jar" />
         <lib-file src="src/android/ShareSDK/libs/MobTools-2016.1222.1756.jar" />
         <lib-file src="src/android/ShareSDK/libs/ShareSDK-Core-2.8.0.jar" />
+        <!--微信jar-->
         <lib-file src="src/android/ShareSDK/libs/ShareSDK-Wechat-2.8.0.jar" />
         <lib-file src="src/android/ShareSDK/libs/ShareSDK-Wechat-Core-2.8.0.jar" />
         <lib-file src="src/android/ShareSDK/libs/ShareSDK-Wechat-Moments-2.8.0.jar" />
+        <!--新浪微博jar-->
+        <lib-file src="src/android/ShareSDK/libs/ShareSDK-SinaWeibo-2.8.0.jar" />
         <!--添加权限-->
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.GET_TASKS" />
@@ -67,6 +70,13 @@
             <WechatMoments Id="5" SortId="5" AppId="$WECHAT_APP_ID" AppSecret="$WECHAT_APP_SECRET" BypassApproval="false" Enable="true" />
         </edit-config>
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <activity android:name="com.mob.tools.MobUIShell" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:configChanges="keyboardHidden|orientation|screenSize" android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden|adjustResize">
+                <!-- 调用新浪原生SDK，需要注册的回调activity -->
+                <intent-filter>
+                    <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+                    <category android:name="android.intent.category.DEFAULT" />
+                </intent-filter>
+            </activity>
             <!--微信分享回调 WXEntryActivity是相对路径，所以需要获取当前项目的包名，动态copy到指定目录。通过cordova的hook完成-->
             <activity android:name=".wxapi.WXEntryActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:configChanges="keyboardHidden|orientation|screenSize" android:exported="true" android:screenOrientation="portrait" />
         </config-file>
